Remove :injections from editor tests